// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package pb;

option go_package = "proto/pb;proto";

message FileInfoRequest{
    string code = 1;
}

message FileInfo {
    string code = 1;
    int32 status = 2;
	string path =3;
    string filename = 4;
    string fullname = 5;
    string ext = 6;
    int64 size = 7;
}

message DownloadFileRequest{
    string code = 1;
    int64 start = 2;
    int64 end = 3;
}

message Chunk{
    bytes content = 1;
}

service FileService {
  rpc Info ( FileInfoRequest ) returns ( FileInfo );
  rpc Download ( DownloadFileRequest ) returns (stream Chunk);
}
